added model generator

--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
-  "name": "test-cli",
+  "name": "@lernato/model-generator",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "author": "Lernato, LLC",
   "license": "MIT",
   "bin": {
-    "hello": "./dist/index.js"
+    "model": "./dist/index.js"
+  },
+  "watch": {
+    "build": {
+      "patterns": [
+        "src"
+      ],
+      "extensions": "ts"
+    }
   },
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
-    "lint": "tslint --project \".\""
+    "lint": "tslint --project \".\"",
+    "watch": "npm-watch"
   },
   "devDependencies": {
-    "@lernato/common": "4.0.0",
+    "@lernato/common": "4.1.0",
     "@types/command-line-args": "5.0.0",
     "@types/command-line-usage": "5.0.1",
+    "@types/fs-extra": "8.0.1",
     "@types/node": "12.12.8",
     "command-line-args": "5.1.1",
     "command-line-usage": "6.1.0",
+    "fs-extra": "8.1.0",
+    "npm-watch": "0.6.0",
     "tslint": "5.20.1",
     "typescript": "3.7.2"
   }
