--- a/package.json
+++ b/package.json
@@ -20,19 +20,24 @@
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project \".\"",
-    "watch": "npm-watch"
+    "watch": "npm-watch",
+    "test": "jest",
+    "test:cov": "jest --coverage"
   },
   "devDependencies": {
     "@lernato/common": "4.1.0",
     "@types/command-line-args": "5.0.0",
     "@types/command-line-usage": "5.0.1",
     "@types/fs-extra": "8.0.1",
+    "@types/jest": "24.0.23",
     "@types/node": "12.12.8",
     "command-line-args": "5.1.1",
     "command-line-usage": "6.1.0",
     "fs-extra": "8.1.0",
+    "jest": "24.9.0",
     "npm-watch": "0.6.0",
     "prettier": "1.18.2",
+    "ts-jest": "24.1.0",
     "tslint": "5.20.1",
     "tslint-config-airbnb": "5.11.2",
     "tslint-config-prettier": "1.18.0",
