cleaned up some code and prepared for publishing

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lernato/cli",
   "version": "0.0.1",
-  "description": "A command line program for generating JavaScript model boilerplate",
+  "description": "A command line program for generating JavaScript and TypeScript projects and boilerplate code.",
   "author": "Lernato, LLC",
   "license": "MIT",
   "main": "dist/index.js",
@@ -20,6 +20,11 @@
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project \".\"",
+    "prepush": "npm run build",
+    "push": "npm publish --access public",
+    "push:major": "npm version major --no-git-tag-version && npm run push",
+    "push:minor": "npm version minor --no-git-tag-version && npm run push",
+    "push:patch": "npm version patch --no-git-tag-version && npm run push",
     "watch": "npm-watch",
     "test": "jest",
     "test:cov": "jest --coverage"
