--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lernato/cli",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "A command line program for generating JavaScript and TypeScript projects and boilerplate code.",
   "author": "Lernato, LLC",
   "license": "MIT",
@@ -29,12 +29,14 @@
     "test": "jest",
     "test:cov": "jest --coverage"
   },
-  "devDependencies": {
+  "dependencies": {
     "@lernato/common": "4.1.1",
+    "fs-extra": "8.1.0"
+  },
+  "devDependencies": {
     "@types/fs-extra": "8.0.1",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.8",
-    "fs-extra": "8.1.0",
     "jest": "24.9.0",
     "npm-watch": "0.6.0",
     "prettier": "1.18.2",
