--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "types": ["node", "jest"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": ["coverage", "dist", "doc", "design", "node_modules", "**/*.spec.ts"]
 }
