--- a/.editorconfig
+++ b/.editorconfig
@@ -4,15 +4,13 @@
 root = true
 
 [*]
-end_of_line = lf
 charset = utf-8
+end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
-
-[Makefile]
-indent_style = tab
+max_line_length = 100
+trim_trailing_whitespace = true
 
 [{*.md,*.json}]
-max_line_length = null
+max_line_length = off
