--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "A command line program for generating JavaScript and TypeScript projects and boilerplate code.",
   "author": "Lernato, LLC",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LernatoLLC/lernato-cli.git"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
@@ -19,7 +23,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "lint": "tslint --project \".\"",
+    "lint": "eslint ./src --ext .js,.ts",
     "prepush": "npm run build",
     "push": "npm publish --access public",
     "push:major": "npm version major --no-git-tag-version && npm run push",
@@ -34,18 +38,27 @@
     "fs-extra": "8.1.0"
   },
   "devDependencies": {
-    "@types/fs-extra": "8.0.1",
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.8",
-    "jest": "24.9.0",
+    "@types/fs-extra": "8.1.0",
+    "@types/jest": "25.1.3",
+    "@types/node": "13.7.4",
+    "@typescript-eslint/eslint-plugin": "2.20.0",
+    "@typescript-eslint/eslint-plugin-tslint": "2.20.0",
+    "@typescript-eslint/parser": "2.20.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-import-resolver-typescript": "2.0.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsdoc": "21.0.0",
+    "eslint-plugin-json": "2.0.1",
+    "eslint-plugin-prettier": "3.1.2",
+    "import": "0.0.6",
+    "jest": "25.1.0",
     "npm-watch": "0.6.0",
-    "prettier": "1.18.2",
-    "ts-jest": "24.1.0",
+    "prettier": "1.19.1",
+    "ts-jest": "25.2.1",
     "tslint": "5.20.1",
-    "tslint-config-airbnb": "5.11.2",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-plugin-prettier": "2.0.1",
-    "typescript": "3.7.2"
+    "typescript": "3.7.5"
   },
   "files": [
     "dist/",
