--- a/package.json
+++ b/package.json
@@ -34,31 +34,32 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
-    "@lernato/common": "4.1.1",
-    "fs-extra": "8.1.0"
+    "@lernato/common": "4.2.0",
+    "fs-extra": "9.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "8.1.0",
-    "@types/jest": "25.1.3",
-    "@types/node": "13.7.4",
-    "@typescript-eslint/eslint-plugin": "2.20.0",
-    "@typescript-eslint/eslint-plugin-tslint": "2.20.0",
-    "@typescript-eslint/parser": "2.20.0",
+    "@types/jest": "25.1.4",
+    "@types/node": "13.9.8",
+    "@typescript-eslint/eslint-plugin": "2.26.0",
+    "@typescript-eslint/eslint-plugin-tslint": "2.26.0",
+    "@typescript-eslint/parser": "2.26.0",
     "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "6.10.0",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-config-prettier": "6.10.1",
     "eslint-import-resolver-typescript": "2.0.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsdoc": "21.0.0",
-    "eslint-plugin-json": "2.0.1",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jsdoc": "22.1.0",
+    "eslint-plugin-json": "2.1.1",
     "eslint-plugin-prettier": "3.1.2",
     "import": "0.0.6",
-    "jest": "25.1.0",
+    "jest": "25.2.4",
+    "moment": "2.24.0",
     "npm-watch": "0.6.0",
-    "prettier": "1.19.1",
-    "ts-jest": "25.2.1",
+    "prettier": "2.0.2",
+    "ts-jest": "25.3.0",
     "tslint": "5.20.1",
-    "typescript": "3.7.5"
+    "typescript": "3.8.3"
   },
   "files": [
     "dist/",
