--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,29 @@
-# This file is for unifying the coding style for different editors and IDEs
-# editorconfig.org
-
+# Editor configuration, see http://editorconfig.org
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
-insert_final_newline = true
 indent_style = space
 indent_size = 2
+insert_final_newline = true
 max_line_length = 100
+quote_type = single
+spaces_around_brackets = indside
+spaces_around_operators = true
 trim_trailing_whitespace = true
 
 [{*.md,*.json}]
 max_line_length = off
+
+# The JSON files contain newlines inconsistently
+[*.json]
+insert_final_newline = ignore
+
+[*.md]
+trim_trailing_whitespace = false
+
+# Minified JavaScript files shouldn't be changed
+[**.min.js]
+indent_style = ignore
+insert_final_newline = ignore
