--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bj.anderson/cli-tool",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A command line program for generating JavaScript and TypeScript projects and boilerplate code.",
   "author": "BJ Anderson",
   "license": "MIT",
@@ -35,7 +35,8 @@
   },
   "dependencies": {
     "@bj.anderson/utils": "5.0.1",
-    "fs-extra": "9.0.0"
+    "fs-extra": "9.0.0",
+    "moment": "2.24.0"
   },
   "devDependencies": {
     "@types/fs-extra": "8.1.0",
@@ -54,7 +55,6 @@
     "eslint-plugin-prettier": "3.1.2",
     "import": "0.0.6",
     "jest": "25.2.4",
-    "moment": "2.24.0",
     "npm-watch": "0.6.0",
     "prettier": "2.0.2",
     "ts-jest": "25.3.0",
