--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "@bj.anderson/cli-tool",
-  "version": "1.1.1",
+  "name": "@bjanderson/cli-tool",
+  "version": "0.0.0",
   "description": "A command line program for generating JavaScript and TypeScript projects and boilerplate code.",
   "author": "BJ Anderson",
   "license": "MIT",
+  "publishConfig": {
+    "@bjanderson:registry": "https://npm.pkg.github.com"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:bjanderson/cli-tool.git"
@@ -22,44 +25,45 @@
     }
   },
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "tsc",
     "lint": "eslint ./src --ext .js,.ts",
-    "prepush": "npm run build",
-    "push": "npm publish --access public",
-    "push:major": "npm version major --no-git-tag-version && npm run push",
-    "push:minor": "npm version minor --no-git-tag-version && npm run push",
-    "push:patch": "npm version patch --no-git-tag-version && npm run push",
+    "prepublish": "npm run build",
+    "push:major": "npm version major",
+    "push:minor": "npm version minor",
+    "push:patch": "npm version patch",
     "watch": "npm-watch",
     "test": "jest",
     "test:cov": "jest --coverage"
   },
   "dependencies": {
-    "@bj.anderson/utils": "5.3.0",
-    "fs-extra": "9.0.1",
+    "@bjanderson/utils": "1.0.1",
+    "fs-extra": "10.0.0",
     "moment": "2.29.1"
   },
   "devDependencies": {
-    "@types/fs-extra": "9.0.6",
-    "@types/jest": "26.0.20",
-    "@types/node": "14.14.21",
-    "@typescript-eslint/eslint-plugin": "4.13.0",
-    "@typescript-eslint/eslint-plugin-tslint": "4.13.0",
-    "@typescript-eslint/parser": "4.13.0",
-    "eslint": "7.18.0",
+    "@types/fs-extra": "9.0.11",
+    "@types/jest": "26.0.23",
+    "@types/node": "15.12.5",
+    "@typescript-eslint/eslint-plugin": "4.28.1",
+    "@typescript-eslint/eslint-plugin-tslint": "4.28.1",
+    "@typescript-eslint/parser": "4.28.1",
+    "eslint": "7.29.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "7.1.0",
-    "eslint-import-resolver-typescript": "2.3.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "31.0.7",
-    "eslint-plugin-json": "2.1.2",
-    "eslint-plugin-prettier": "3.3.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-typescript": "2.4.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsdoc": "35.4.1",
+    "eslint-plugin-json": "3.0.0",
+    "eslint-plugin-prettier": "3.4.0",
     "import": "0.0.6",
     "jest": "26.6.3",
-    "npm-watch": "0.7.0",
-    "prettier": "2.2.1",
-    "ts-jest": "26.4.4",
+    "npm-watch": "0.10.0",
+    "prettier": "2.3.2",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.5.6",
     "tslint": "5.20.1",
-    "typescript": "4.1.3"
+    "typescript": "4.3.4"
   },
   "files": [
     "dist/",
