--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,8 +1,6 @@
-name: Node.js Package
+name: cli-tool-release
 
-on:
-  release:
-    types: [created]
+on: [push]
 
 jobs:
   build:
@@ -11,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 16
       - run: npm install
       - run: npm test
 
@@ -25,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 16
           registry-url: https://npm.pkg.github.com/
       - run: npm install
       - run: npm run build
